...
          <Pressable
            onPress={() => {
              confirmSheetRef.current?.dismiss()
              dispatch(FavoritesActions.deleteLabel(labelToDelete))
            }}
            style={sheetStyles.action}
            testID="delete_label_confirm"
          >
            <Text variant="bodyLarge" style={{ color: theme.colors.error }}>
              delete label
            </Text>
          </Pressable>
          <Divider />
...
